2006-12-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb (Gem::loaded_specs): Expose list of currently loaded
	gems.

2006-12-14  Eric Hodel  <drbrain@segment7.net>

	* post-install.rb: Don't attempt to read unreadable files.  Fixes
	bug #2851.

2006-12-13  Eric Hodel  <drbrain@segment7.net>

	* pre-install.rb.rb, post-install.rb: Don't call manage_gems because
	we don't have sources installed yet.  Bump version requirement to
	1.8.2 since rubygems/open-uri.rb was removed.  Should fix bug #6206.

	* lib/rubygems/installer.rb (Gem::Installer#build_extensions): Capture
	stderr into results when building extensions.

	* lib/rubygems/gem_commands.rb (Gem::ContentsCommand): Allow version
	to be passed to gem contents.  Not backwards compatible, -v now -V and
	vice versa.  Select newest gem for contents.  Fixes bugs #2723, #7225.
	Patches by Sava Chankov, Tom Pollard.

	* lib/rubygems/gem_commands.rb (Gem::InstallCommand#execute): Allow
	install errors to result in non-zero exit code.  Fixes bug #2773.

2006-12-03  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_installer.rb (Gem::RemoteInstaller#install):
	Add :cache_dir option to override the default.

	* lib/rubygems/remote_installer.rb (Gem::RemoteInstaller#download_gem): 
	Check cache to see if the gem has been cached before downloading.

2006-12-02  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems.rb (Gem::OperationNotSupportedError::suffixes,
	Gem::OperationNotSupportedError::suffix_pattern): Removed
	duplicate copies of the SUFFIX_PATTERN by providing a global
	method Gem.suffixes and Gem.suffix_pattern.

	* lib/rubygems/remote_fetcher.rb (Gem::open_uri_or_path): Reworked
	the connection options for the open-uri call.  Since we are not
	using the rubygems supplied open_uri, we can use some new options
	available that make proxy handling much easier.
	(Gem::file_uri): Renamed is_file_uri to file_uri?.

	* lib/rubygems/loadpath_manager.rb (Gem::LoadPathManager::self):